🩹 fix dependency mapping
Configure remappings in the foundry.toml file.

--- a/foundry.toml
+++ b/foundry.toml
@@ -16,6 +16,11 @@
   solc = "0.8.19"
   src = "src"
   test = "test"
+  remappings = [
+    "ds-test/=lib/forge-std/lib/ds-test/src/",
+    "forge-std/=lib/forge-std/src/",
+    "prb-test/=lib/prb-test/src/"
+  ]
 
 [profile.ci]
   fuzz = { runs = 10_000 }
