👷 update ci workflows
Split the CI workflow into 2 separate workflows:
- `tests.yml` for running the tests
- `quality-checks.yml` for running linter, the code formatter and the build
command
Also I take the opportunity to update the npm scripts related to the workflows

--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
 
   "scripts": {
     "clean": "rm -rf cache out",
-    "lint": "npm run lint:sol && npm run prettier:check",
-    "lint:sol": "forge fmt --check && solhint \"{script,src,test}/**/*.sol\"",
+    "lint": "forge fmt --check && solhint \"{script,src,test}/**/*.sol\"",
+    "lint:write": "forge fmt && solhint \"{script,src,test}/**/*.sol\" --fix",
     "prettier:check": "prettier --check \"**/*.{json,md,yml}\"",
-    "prettier:write": "prettier --write \"**/*.{json,md,yml}\""
+    "prettier:write": "prettier --write \"**/*.{json,md,yml}\"",
+    "quality": "npm run lint && npm run prettier"
   }
 }
