--- a/.github/workflows/quality-checks.yml
+++ b/.github/workflows/quality-checks.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm ci
 
       - name: Run the linter and the formatter in check mode
-        run: npm run quality
+        run: make quality
 
       - name: Add lint summary
         run: |
