👷 setup gas diff workflow
This workflow automatically compare gas difference introduces by the
changes pushed and comment the difference on the PR.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    # TODO: Make this permission more granular
+    permissions: write-all
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -36,10 +38,23 @@ jobs:
             echo $(($EPOCHSECONDS - $EPOCHSECONDS % 604800))
           )" >> $GITHUB_ENV
 
-      - name: Run the tests
-        run: make test
+      # TODO: Rework the job to correctly print the output of the test command
+      - name: Run tests with gas reporting
+        run: forge test --gas-report > gasreport.ansi
 
-      - name: Add test summary
-        run: |
-          echo "## Tests result" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+      - name: Compare gas reports
+        uses: Rubilmax/foundry-gas-diff@v3.14
+        with:
+          summaryQuantile: 0.8 # only display the 20% most significant gas diffs in the summary
+          sortCriteria: avg,max # sort diff rows by criteria
+          sortOrders: desc,asc # and directions
+        id: gas_diff
+
+      # Comment on the PR with the gas diff
+      - name: Add gas diff to sticky comment
+        if: github.event_name == 'pull_request' || github.event_name == 'pull_request_target'
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          # delete the comment in case changes no longer impact gas costs
+          delete: ${{ !steps.gas_diff.outputs.markdown }}
+          message: ${{ steps.gas_diff.outputs.markdown }}
