👷simplify package.json and update/rename create.sh
The `create.sh` script runs once when a new repository is created based
on this template. It updates the `package.json` file to reflect the
name of the new repository and other information. It also remove useless
files, like the script itself. I rename it to `setup-template.yml`

--- a/.github/workflows/setup-template.yml
+++ b/.github/workflows/setup-template.yml
@@ -20,7 +20,8 @@ jobs:
         env:
           GITHUB_REPOSITORY_DESCRIPTION: ${{ github.event.repository.description }}
         run:
-          ./.github/scripts/rename.sh "$GITHUB_REPOSITORY" "$GITHUB_REPOSITORY_OWNER" "$GITHUB_REPOSITORY_DESCRIPTION"
+          ./.github/scripts/setup-packagejson.sh "$GITHUB_REPOSITORY" "$GITHUB_REPOSITORY_OWNER"
+          "$GITHUB_REPOSITORY_DESCRIPTION"
 
       - name: "Add rename summary"
         run: |
@@ -30,7 +31,7 @@ jobs:
       - name: "Remove files not needed in the user's copy of the template"
         run: |
           rm -f "./.github/FUNDING.yml"
-          rm -f "./.github/scripts/rename.sh"
+          rm -f "./.github/scripts/setup-packagejson.sh"
           rm -f "./.github/workflows/create.yml"
 
       - name: "Add remove summary"
@@ -41,7 +42,7 @@ jobs:
       - name: "Update commit"
         uses: "stefanzweifel/git-auto-commit-action@v4"
         with:
-          commit_message: "feat: initial commit"
+          commit_message: "🎉 initialize the project using @qd-qd template"
           commit_options: "--amend"
           push_options: "--force"
           skip_fetch: true
