--- a/package.json
+++ b/package.json
@@ -2,20 +2,9 @@
   "name": "@qd-qd/template-foundry",
   "description": "Foundry-based template for developing Solidity smart contracts. Based on PaulRBerg template.",
   "version": "0.0.1",
-  "contributors": [
-    {
-      "name": "qd-qd",
-      "email": "qdqdqdqdqd@protonmail.com",
-      "url": "https://github.com/qd-qd"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:qd-qd/template-foundry.git"
-  },
-  "bugs": {
-    "url": "https://github.com/qd-qd/template-foundry/issues"
-  },
+  "author": "qd-qd https://github.com/qd-qd",
+  "repository": "github:@qd-qd/template-foundry",
+  "bugs": "https://github.com/qd-qd/template-foundry/issues",
   "homepage": "https://github.com/qd-qd/template-foundry#readme",
   "engines": {
     "node": ">= 18"
