--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -20,7 +20,7 @@ jobs:
         id: create_release
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
-          repo_token: "${{ secrets.SMOOTH_QDQD_SECP256R1_RELEASE_TOKEN }}"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
 
   deploy-doc:
