--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@qd-qd/template-foundry",
+  "name": "@0x90d2b2b7fb7599eebb6e7a32980857d8/template-foundry",
   "description": "Foundry-based template for developing Solidity smart contracts. Based on PaulRBerg template.",
   "version": "1.0.0",
-  "author": "qd-qd https://github.com/qd-qd",
-  "repository": "github:@qd-qd/template-foundry",
-  "bugs": "https://github.com/qd-qd/template-foundry/issues",
-  "homepage": "https://github.com/qd-qd/template-foundry#readme",
+  "author": "0x90d2b2b7fb7599eebb6e7a32980857d8 https://github.com/0x90d2b2b7fb7599eebb6e7a32980857d8",
+  "repository": "github:@0x90d2b2b7fb7599eebb6e7a32980857d8/template-foundry",
+  "bugs": "https://github.com/0x90d2b2b7fb7599eebb6e7a32980857d8/template-foundry/issues",
+  "homepage": "https://github.com/0x90d2b2b7fb7599eebb6e7a32980857d8/template-foundry#readme",
   "engines": {
     "node": ">= 18"
   },
