--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,3 +58,41 @@ jobs:
           # delete the comment in case changes no longer impact gas costs
           delete: ${{ !steps.gas_diff.outputs.markdown }}
           message: ${{ steps.gas_diff.outputs.markdown }}
+
+  coverage:
+    needs: ["test"]
+    permissions: write-all
+    runs-on: "ubuntu-latest"
+    steps:
+      - name: "Check out the repo"
+        uses: "actions/checkout@v3"
+        with:
+          submodules: "recursive"
+
+      - name: "Install Foundry"
+        uses: "foundry-rs/foundry-toolchain@v1"
+
+      - name: Setup lcov
+        uses: hrishikesh-kadam/setup-lcov@v1
+
+      - name: "Generate the coverage report"
+        # contracts in the test/ and script/ directory are excluded fron the report
+        # the precompute internal version of the library is also excluded from the report as
+        # it is highly experimental and to meant to be used at all
+        run: "forge coverage --report lcov && lcov --remove lcov.info \
+          -o lcov.info 'test/*' 'script/*'"
+
+      - name: "Add coverage summary"
+        run: |
+          echo "## Coverage result" >> $GITHUB_STEP_SUMMARY
+          echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
+
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v3
+        with:
+          coverage-files: lcov.info
+          # uncomment the following line to enforce a minimum coverage
+          # minimum-coverage: 80
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          update-comment: true
